--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "yaml.schemas": {
-        "https://json.schemastore.org/github-workflow.json": "file:///d%3A/Study/WSHY/.github/workflows/deploy.yml"
+        "https://json.schemastore.org/github-workflow.json": "file:///d%3A/Study/wshy-docs/.github/workflows/deploy.yml"
     }
 }
